traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:49: error: not found: value Direction
  }else if(getDirection()==Direction.EST){
                           ^TraversalZigZag:54: error: not found: value Direction
  }else if (getDirection()==Direction.OUEST){
                            ^